--- a/assets/sass/layouts/recipeitem/_tags.scss
+++ b/assets/sass/layouts/recipeitem/_tags.scss
@@ -1,9 +1,7 @@
 .tags {
-  display: grid;
+  @extend %d--grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
-
-  // @extend %overflow-hidden;
 
   @include device(phone) {
     grid-gap: 5vmin;
@@ -13,22 +11,16 @@
   .tag {
     width: 100%;
     padding: 2vmin;
-    // margin: 1rem;
     line-height: 1;
     @extend %fw-600;
     background: var(--clr_white_grd_btns);
     box-shadow: var(--box_shadow_accent);
     border-radius: 15px;
-    display: grid;
+    @extend %d--grid;
     grid-auto-flow: column;
     grid-gap: 1.8vmin;
     align-items: center;
     justify-content: flex-start;
-    // transition: transform 0.4s $inOutBack;
-
-    // & > * {
-    //   margin: 0.8rem;
-    // }
 
     @include device(phone-land) {
       grid-gap: 2vmin;
@@ -39,18 +31,13 @@
       border-radius: 12px;
     }
 
-    // &:hover,
-    // &:focus {
-    //   transform: translateY(-5%);
-    // }
-
     &__icon-wrapper {
       --size: 4rem;
       width: var(--size);
       height: var(--size);
       border-radius: 1rem;
       background: var(--clr_accent_light);
-      display: grid;
+      @extend %d--grid;
       place-items: center;
 
       @include device(phone) {
@@ -65,7 +52,6 @@
       @include device(phone) {
         width: 1.8rem;
       }
-      // stroke: currentColor;
     }
 
     &__nameAmountWrapper {
