--- a/assets/sass/abstract/_animations.scss
+++ b/assets/sass/abstract/_animations.scss
@@ -4,50 +4,29 @@
 .recipecard-enter,
 .recipecard-leave-to {
   opacity: 0;
-  // transform: scale(0.7) translate3d(0, 20%, 0);
   transform: translate3d(0, 20%, 0);
-  // transform: scale(0);
 }
 .recipecard-enter-to {
   opacity: 1;
-  // transform: scale(1) translate3d(0, 0%, 0);
   transform: translate3d(0, 0%, 0);
-  // transform: scale(1);
 }
 .recipecard-leave-active {
   transition: transform 0.2s ease, opacity 0.2s linear;
 }
 
-.title-enter-active {
-  transition: transform 0.6s $outBack, opacity 0.6s linear;
-}
-.title-leave {
-  opacity: 0;
-  transform: translate3d(0, 100%, 0);
-}
-.title-enter {
-  opacity: 1;
-  transform: translate3d(0, 0%, 0);
-}
-.title-leave-active {
-  transition: transform 0.5s ease, opacity 0.5s linear;
-}
-
-// .recipecard-enter-active {
-//     transition: transform 0.5s ease-in;
+// .title-enter-active {
+//   transition: transform 0.6s $outBack, opacity 0.6s linear;
 // }
-// .recipecard-enter {
-//     opacity: 0;
-//     transform: scale(0.5);
+// .title-leave {
+//   opacity: 0;
+//   transform: translate3d(0, 100%, 0);
 // }
-
-// .recipecard-enter-to {
-//     opacity: 1;
-//     transform: scale(1);
+// .title-enter {
+//   opacity: 1;
+//   transform: translate3d(0, 0%, 0);
 // }
-
-// .recipecard-leave-active {
-//     transition: transform 0.2s ease-out;
+// .title-leave-active {
+//   transition: transform 0.5s ease, opacity 0.5s linear;
 // }
 
 .page-enter-active {
@@ -58,11 +37,6 @@
 .page-leave-active {
   will-change: transform, opacity;
 }
-
-// .page-leave-active {
-//   transition: transform 0.5s $inCirc, opacity 0.5s linear;
-//   backface-visibility: hidden;
-// }
 
 .page-enter,
 .page-leave-to {
@@ -109,39 +83,12 @@
 }
 .notification-enter,
 .notification-leave-to {
-  // transform: translate3d(0, -2rem, 0);
   transform: translate3d(-100%, 0, 0);
 }
 .notification-enter-to,
 .notification-leave {
   transform: translate3d(0, 0, 0);
 }
-
-//! KAD SU ANIMATION UKLJ ZA LOADER
-// .page-enter-active {
-//   transition: transform 1s $outSmooth, opacity 0.8s linear;
-//   backface-visibility: hidden;
-// }
-
-// .page-leave-active {
-//   transition: transform 0.5s $inCirc, opacity 0.5s linear;
-//   backface-visibility: hidden;
-// }
-
-// .page-enter {
-//   //   opacity: 0;
-//   transform: translate3d(0, 80%, 0);
-// }
-// .page-enter-to,
-// .page-leave {
-//   //   opacity: 1;
-//   transform: translate3d(0, 0, 0);
-// }
-
-// // .page-leave-to {
-// //   //   opacity: 0;
-// //   transform: translate3d(0, 100%, 0);
-// // }
 
 .slideLeft-enter-active {
   will-change: transform;
