--- a/assets/sass/components/_sidebarcard.scss
+++ b/assets/sass/components/_sidebarcard.scss
@@ -1,120 +1,109 @@
 .sidebarcards {
-  display: grid;
-  place-content: center;
-  align-content: space-around;
-  grid-gap: 1vmin;
+    @extend %d--grid;
+    justify-content: center;
+    align-content: space-around;
+    grid-gap: 1vmin;
 
-  @include device(tab-land) {
-    grid-auto-flow: row;
-    width: 50vw;
-  }
+    @include device(tab-land) {
+        grid-auto-flow: row;
+        width: 50vw;
+    }
 }
 
 .sidebarcard {
-  --radius-sidebarcard: 2.3vw;
-  @extend %overflow-hidden;
-  @extend %pos-rel;
-  width: 100%;
-  border-radius: var(--radius-sidebarcard);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: space-between;
-  grid-gap: 1.8rem;
-  background: var(--clr_sidecard_bg);
-  // background: currentColor;
-  @extend %cursor;
-
-  padding: 2.5vh 1.6vw;
-  min-height: 14rem;
-  transition: transform 0.5s $inOutBack, box-shadow 0.5s $outBack 0.3s;
-
-  &:hover,
-  &:focus {
-    transform: translateY(-3%);
-
-    .sidebarcard__title {
-      color: currentColor;
-      font-weight: 600;
-    }
-    .sidebarcard__figure {
-      --radius-sidebarfigure: var(--radius-sidebarcard);
-      width: 100% !important;
-      height: 100% !important;
-      right: 0;
-
-      &::after {
-        // opacity: 0.7;
-        // background: var(--clr_black);
-        background: hsl(var(--clr-black) / 0.75);
-        // backdrop-filter: blur(3px);
-      }
-    }
-  }
-
-  &__left {
-    // --padding-left: 1.6vw;
-    // padding: var(--padding-left) 0 var(--padding-left) var(--padding-left);
-    z-index: 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    // @include device(tab-land) {
-    //   --padding-left: 5vw;
-    // }
-  }
-
-  &__title {
-    color: var(--clr_black);
-    font-size: 1.5rem;
-    text-transform: capitalize;
-    display: inline-block;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-    transition: color 0.4s, font-weight 0.4s;
-  }
-
-  &__btns {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1vw;
-    @extend %fw-600;
-
-    svg {
-      width: 1.5rem;
-    }
-  }
-
-  &__figure {
-    --radius-sidebarfigure: 30% 70% 70% 30% / 30% 30% 70% 70%;
-    // --radius-sidebarfigure: 30% 70% 70% 30% / 30% 52% 48% 70%;
-    --size: 7vw;
+    --radius-sidebarcard: 2.3vw;
     @extend %overflow-hidden;
-    @extend %pos-abs;
-    top: 50%;
-    right: -5%;
-    transform: translateY(-50%);
-    width: var(--size);
-    height: var(--size);
-    z-index: 2;
-    // border-radius: var(--radius-sidebarfigure) 0 0 var(--radius-sidebarfigure);
-    border-radius: var(--radius-sidebarfigure);
-    transition: 0.4s;
+    @extend %pos-rel;
+    width: 100%;
+    border-radius: var(--radius-sidebarcard);
+    @extend %d--grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: space-between;
+    grid-gap: 1.8rem;
+    background: var(--clr_sidecard_bg);
+    @extend %cursor;
 
-    &::after {
-      --gradient_deg: 90deg;
-      @extend %pos-abs;
-      @extend %after;
-      top: 0;
-      left: 0;
-      // background: var(--clr_black);
-      background: hsl(var(--clr-black) / 0.2);
-      // opacity: 0.2;
-      transition: 0.4s;
+    padding: 2.5vh 1.6vw;
+    min-height: 14rem;
+    // box-shadow: var(--box_shadow_accent);
+
+    transition: transform 0.5s $inOutBack, box-shadow 0.5s $outBack 0.2s;
+
+    &:hover,
+    &:focus {
+        transform: translateY(-3%);
+        box-shadow: 0 25px 3px -20px hsl(var(--clr-black) / 0.5);
+
+        .sidebarcard__title {
+            color: currentColor;
+            @extend %fw-600;
+        }
+        .sidebarcard__figure {
+            --radius-sidebarfigure: var(--radius-sidebarcard);
+            width: 100% !important;
+            height: 100% !important;
+            right: 0;
+
+            &::after {
+                background: hsl(var(--clr-black) / 0.75);
+            }
+        }
     }
-  }
-  &__img {
-    @extend %img-basic;
-  }
+
+    &__left {
+        z-index: 3;
+        @extend %d--flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__title {
+        color: var(--clr_black);
+        font-size: 1.5rem;
+        text-transform: capitalize;
+        @extend %d--inline-block;
+        @extend %fw-500;
+        margin-bottom: 1.5rem;
+        transition: color 0.4s, font-weight 0.4s;
+    }
+
+    &__btns {
+        @extend %d--grid;
+        grid-auto-flow: column;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1vw;
+        @extend %fw-600;
+
+        svg {
+            width: 1.5rem;
+        }
+    }
+
+    &__figure {
+        --radius-sidebarfigure: 30% 70% 70% 30% / 30% 30% 70% 70%;
+        --size: 7vw;
+        @extend %overflow-hidden;
+        @extend %pos-abs;
+        top: 50%;
+        right: -5%;
+        transform: translateY(-50%);
+        width: var(--size);
+        height: var(--size);
+        z-index: 2;
+        border-radius: var(--radius-sidebarfigure);
+        transition: 0.4s;
+
+        &::after {
+            --gradient_deg: 90deg;
+            @extend %pos-abs;
+            @extend %after;
+            top: 0;
+            left: 0;
+            background: hsl(var(--clr-black) / 0.2);
+            transition: 0.4s;
+        }
+    }
+    &__img {
+        @extend %img-basic;
+    }
 }
