--- a/assets/sass/layouts/recipeitem/_showcase.scss
+++ b/assets/sass/layouts/recipeitem/_showcase.scss
@@ -1,232 +1,251 @@
 .showcase {
-  --img_radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-  display: grid;
-  width: max-content;
-  @extend %pos-rel; //* imperative for the overlapping to work
+    --img_radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    @extend %d--grid;
+    width: max-content;
+    @extend %pos-rel; //* imperative for the overlapping to work
 
-  // @include device(tab-mid) {
-  //   margin-top: 6rem;
-  // }
-  @include device(phone) {
-    margin-top: 6rem;
-  }
-
-  &:hover {
-    .showcase__trivia {
-      transform: scale(1);
-      opacity: 1;
-      p {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      &::after {
-        transform: scaleY(1);
-      }
-    }
-
-    .showcase__nutrition {
-      & > * {
-        opacity: 0;
-      }
-      transform: scale(0);
-    }
-  }
-
-  &__figure {
-    --img_size: 27vw;
-    width: var(--img_size);
-    height: var(--img_size);
-    border-radius: var(--img_radius);
-    @extend %overflow-hidden;
-    // box-shadow: 0px 0px 0px 20px var(--clr_white);
-    // @extend %pos-rel;
-
-    @include device(tab-mid) {
-      --img_size: 38vw;
-    }
-    @include device(tab) {
-      --img_size: 45rem;
-    }
-    @include device(phone-land) {
-      --img_size: 73vw;
-    }
     @include device(phone) {
-      // --img_size: 73vw;
+        margin-top: 6rem;
     }
 
-    img {
-      @extend %img-basic;
-      // object-fit: fill;
-      // box-shadow: 0 2px 20px 0 rgb(255 255 255 / 5%);
-    }
-  }
-  &__nutritions {
-    justify-self: flex-end;
-    @extend %grid;
-    // grid-gap: 2rem;
-    grid-gap: 2vh;
-    @extend %pos-abs;
-    top: 45%;
-    transform: translate(32%, -50%);
+    &:hover,
+    &:focus {
+        .showcase__trivia {
+            transform: scale(1);
+            @extend %opacity-1;
+            box-shadow: var(--box_shadow_alpha);
 
-    @include device(tab-land) {
-      grid-gap: 1.5vh;
-    }
-    @include device(phone-land) {
-      grid-gap: 2vh;
-      transform: translate(20%, -50%);
-    }
-    @include device(phone-ant) {
-      grid-gap: 1.5rem;
-    }
-    // @include device(phone) {
-    //   grid-gap: 3rem;
-    //   transform: translate(20%, -50%);
-    // }
-  }
+            p {
+                @extend %opacity-1;
+                transform: translateY(0);
+            }
+            &::after {
+                // transform: scaleY(1);
+                transform: scaleY(1) rotate(0deg);
+            }
+            &::before {
+                transform: scale(1) rotate(30deg);
+            }
+        }
 
-  &__nutrition {
-    --amount_size: 5.5rem;
-    min-width: 18rem;
-    width: 13vw;
-    padding: 1.1rem;
-    border-radius: 5rem;
-    @extend %grid-center;
-    grid-auto-flow: column;
-    justify-content: start;
-    grid-gap: 1.4vmin;
-    font-size: 1.4rem;
-    @extend %fw-600;
-    letter-spacing: 0.5px;
-    background: var(--clr_white_grd_btns);
-    color: var(--clr_accent);
-    transform-origin: right center;
-    box-shadow: var(--box_shadow_alpha);
-
-    transition: 0.8s;
-
-    @include device(tab-land) {
-      // width: 16vmin;
-      padding: 0.8rem;
-    }
-    @include device(tab-mid) {
-      width: 20vw;
-      padding: 1rem;
-    }
-    @include device(tab) {
-      --amount_size: 6rem;
-      width: 23rem;
-      padding: 1.2rem;
-    }
-    @include device(phone-land) {
-      width: 21rem;
-      padding: 0.9rem;
-    }
-    @include device(phone) {
-      width: 22rem;
-      padding: 1rem;
-      font-size: 1.6rem;
-    }
-    @include device(phone-ant) {
-      width: 18rem;
-      padding: 0.8rem;
-      // font-size: 1.6rem;
+        .showcase__nutrition {
+            & > * {
+                @extend %opacity-0;
+            }
+            transform: scale(0);
+        }
     }
 
-    & > * {
-      transition: opacity 0.3s ease;
+    &__figure {
+        --img_size: 28vw;
+        width: var(--img_size);
+        height: var(--img_size);
+        border-radius: var(--img_radius);
+        @extend %overflow-hidden;
+
+        @include device(tab-mid) {
+            --img_size: 38vw;
+        }
+        @include device(tab) {
+            --img_size: 45rem;
+        }
+        @include device(phone-land) {
+            --img_size: 73vw;
+        }
+        img {
+            @extend %img-basic;
+        }
+    }
+    &__nutritions {
+        justify-self: flex-end;
+        @extend %d--grid;
+        grid-gap: 2.5vh;
+        @extend %pos-abs;
+        top: 45%;
+        transform: translate(32%, -50%);
+
+        @include device(tab-land) {
+            grid-gap: 1.5vh;
+        }
+        @include device(phone-land) {
+            grid-gap: 2vh;
+            transform: translate(20%, -50%);
+        }
+        @include device(phone-ant) {
+            grid-gap: 1.5rem;
+        }
     }
 
-    &:nth-of-type(1) {
-      transition-delay: 0.1s;
-    }
-    &:nth-of-type(2) {
-      transition-delay: 0.15s;
-    }
-    &:nth-of-type(3) {
-      transition-delay: 0.15s;
-    }
-    &:nth-of-type(4) {
-      transition-delay: 0.1s;
+    &__nutrition {
+        --amount_size: 5.5rem;
+        min-width: 20rem;
+        width: 13vw;
+        padding: 1.1rem;
+        border-radius: 5rem;
+        @extend %grid-center;
+        grid-auto-flow: column;
+        justify-content: start;
+        grid-gap: 1.4vmin;
+        font-size: 1.4rem;
+        @extend %fw-600;
+        letter-spacing: 0.5px;
+        background: var(--clr_white_grd_btns);
+        color: var(--clr_accent);
+        transform-origin: right center;
+        box-shadow: var(--box_shadow_alpha);
+
+        transition: 0.8s;
+
+        @include device(tab-land) {
+            padding: 0.8rem;
+        }
+        @include device(tab-mid) {
+            width: 20vw;
+            padding: 1rem;
+        }
+        @include device(tab) {
+            --amount_size: 6rem;
+            width: 23rem;
+            padding: 1.2rem;
+        }
+        @include device(phone-land) {
+            width: 21rem;
+            padding: 0.9rem;
+        }
+        @include device(phone) {
+            width: 22rem;
+            padding: 1rem;
+            font-size: 1.6rem;
+        }
+        @include device(phone-ant) {
+            width: 18rem;
+            padding: 0.8rem;
+        }
+
+        & > * {
+            transition: opacity 0.3s ease;
+        }
+
+        &:nth-of-type(1) {
+            transition-delay: 0.1s;
+        }
+        &:nth-of-type(2) {
+            transition-delay: 0.15s;
+        }
+        &:nth-of-type(3) {
+            transition-delay: 0.15s;
+        }
+        &:nth-of-type(4) {
+            transition-delay: 0.1s;
+        }
+
+        &-amount {
+            @extend %flex-center;
+            width: var(--amount_size);
+            height: var(--amount_size);
+            background: var(--clr_accent_light);
+            border-radius: 100vw;
+            @extend %fw-700;
+        }
+        &-name {
+            @extend %d--grid;
+            line-height: 1.4;
+        }
+        &-unit {
+            font-size: 0.9rem;
+            @extend %fw-700;
+            text-transform: uppercase;
+            color: var(--clr_black);
+            opacity: 0.9;
+
+            @include device(phone) {
+                font-size: 1.3rem;
+            }
+        }
     }
 
-    &-amount {
-      @extend %flex-center;
-      width: var(--amount_size);
-      height: var(--amount_size);
-      // color: currentColor;
-      background: var(--clr_accent_light);
-      border-radius: 100vw;
-      @extend %fw-700;
-    }
-    &-name {
-      @extend %grid;
-      line-height: 1.4;
-    }
-    &-unit {
-      font-size: 0.9rem;
-      @extend %fw-700;
-      text-transform: uppercase;
-      color: var(--clr_black);
-      opacity: 0.9;
+    &__trivia {
+        background: var(--clr_white);
+        border-radius: var(--img_radius);
+        padding: 4rem;
+        @extend %pos-abs;
+        @extend %w-100;
+        @extend %h-100;
+        @extend %grid-center;
+        @extend %txt-center;
+        @extend %fw-500;
+        @extend %opacity-0;
+        transform: scale(0.25);
+        transform-origin: left center;
+        transition: 0.8s;
+        transition-delay: 0.1s;
+        z-index: 100;
+        border-radius: var(--img_radius);
 
-      @include device(phone) {
-        font-size: 1.3rem;
-      }
+        p {
+            font-size: 1.6rem;
+            @extend %opacity-0;
+            transform: translateY(100%);
+            transition: transform 0.8s $outSmooth, opacity 0.8s $outSmooth;
+            transition-delay: 0.6s;
+
+            @include device(tab-mid) {
+                font-size: 1.8rem;
+            }
+            @include device(phone) {
+                font-size: 2rem;
+            }
+        }
+
+        &::after {
+            @extend %pos-abs;
+            content: '\201F';
+            color: var(--clr_accent_light);
+            text-shadow: 1px 5px 0px var(--clr_accent);
+            font-size: 25rem;
+            @extend %fw-600;
+            line-height: 0;
+            top: 29%;
+            left: -10%;
+            transform: scaleY(0) rotate(90deg);
+            transition: transform 0.8s $outBack;
+            transition-delay: 0.7s;
+            z-index: -1;
+
+            @include device(tab-land) {
+                font-size: 30rem;
+            }
+            @include device(tab-mid) {
+                font-size: 40rem;
+            }
+            @include device(tab) {
+                font-size: 38rem;
+                top: 25%;
+                left: -8%;
+            }
+        }
+        &::before {
+            @extend %pos-abs;
+            content: '💡';
+            text-shadow: 5px 5px 0px var(--clr_accent);
+            text-shadow: 1px 5px 0px var(--clr_accent);
+            font-size: 30rem;
+            @extend %fw-600;
+            line-height: 0;
+            top: 60%;
+            right: 0%;
+            opacity: 0.2;
+            transform: scale(0) rotate(0deg);
+            transition: transform 0.8s $outBack;
+            transition-delay: 1s;
+            z-index: -1;
+
+            @include device(tab-land) {
+                font-size: 25rem;
+            }
+            @include device(tab-mid) {
+                font-size: 30rem;
+            }
+        }
     }
-  }
-
-  &__trivia {
-    background: var(--clr_white);
-    border-radius: var(--img_radius);
-    padding: 4rem;
-    @extend %pos-abs;
-    @extend %w-100;
-    @extend %h-100;
-    @extend %grid-center;
-    // display: grid;
-    // place-items: center;
-    text-align: center;
-    font-size: 1.3rem;
-    @extend %fw-500;
-    opacity: 0;
-    transform: scale(0.25);
-    transform-origin: left center;
-    transition: 0.8s;
-    transition-delay: 0.1s;
-    z-index: 100;
-
-    // @-moz-document url-prefix() {
-    //     background: var(--clr_bg_card_firefox);
-    // }
-
-    p {
-      opacity: 0;
-      transform: translateY(100%);
-      font-size: 1.5rem;
-      transition: 0.8s;
-      transition-delay: 0.5s;
-    }
-
-    // &::before,
-    &::after {
-      @extend %pos-abs;
-      // content: '"';
-      content: "\275D";
-      content: "\201F";
-      // color: currentColor;
-      color: var(--clr_accent_light);
-      text-shadow: 3px 3px 0px var(--clr_accent);
-      font-size: 30rem;
-      font-weight: 600;
-      line-height: 0;
-      top: 35%;
-      left: -20%;
-      transform: scaleY(0);
-      transform-origin: 0% 0%;
-      transition: 0.5s;
-      transition-delay: 0.67s;
-      z-index: -1;
-    }
-  }
 }
